--- a/inventory-system/package.json
+++ b/inventory-system/package.json
@@ -13,6 +13,7 @@
     "arg": "^4.1.3",
     "create-require": "^1.1.1",
     "diff": "^4.0.2",
+    "inventory-system": "file:",
     "make-error": "^1.3.6",
     "undici-types": "^6.20.0",
     "v8-compile-cache-lib": "^3.0.1",
