--- a/ProductCRUD/product-backend/package.json
+++ b/ProductCRUD/product-backend/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "product-cli",
+  "name": "product-backend",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "clean": "rm -rf dist"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,16 +12,14 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "product-cli": "file:"
+    "product-backend": "file:"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
-    "@types/readline-sync": "^1.4.8",
-    "chalk": "^5.4.1",
-    "readline-sync": "^1.4.10",
+    "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
