--- a/ProductCRUD/product-backend/package.json
+++ b/ProductCRUD/product-backend/package.json
@@ -17,10 +17,12 @@
     "product-backend": "file:"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   }
 }
